--- a/.gitignore
+++ b/.gitignore
@@ -32,14 +32,15 @@ local.properties
 
 # node.js
 #
-node_modules/
-npm-debug.log
+node_modules/**/*
+npm-debug.*
 yarn-error.log
 
 # BUCK
 buck-out/
 \.buckd/
 *.keystore
+
 
 # fastlane
 #
