--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TodoApp",
+  "name": "todoapp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "react": "16.6.3",
-    "react-native": "^0.58.4"
+    "react-native": "^0.58.4",
+    "react-native-cli": "^2.0.1"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
     "babel-jest": "23.6.0",
     "eslint": "^5.14.0",
     "eslint-config-airbnb": "^17.1.0",
